syntax="proto3";

package app.proto;

import "payment/api/init_types.proto";


option go_package = "gitlab.mapcard.pro/external-map-team/order-service/app/proto;proto";

service OrderService {
    rpc AddOrder(payment.api.OrderRequest) returns (payment.api.Order) {}
    rpc ListOrders(payment.api.ListOrdersRequest) returns (stream payment.api.Order) {}
    rpc DeleteOrder(payment.api.SelectOrderRequest) returns (payment.api.Order) {}
    rpc UpdateOrder(payment.api.UpdateOrderRequest) returns (payment.api.Order) {}
    rpc GetOrder(payment.api.SelectOrderRequest) returns (payment.api.Order) {}

}



